# SeparableConvolutionCUDALib

./: CMakeLists.txt  README.md  separableconvolutioncudalib-config-version.cmake.in  separableconvolutioncudalib-config.cmake.in
src/: CMakeLists.txt  book.h  convolutionSeparable_gold.cpp  separableConvolution.cu  separableConvolution.h  separableConvolution_127.cu  separableConvolution_15.cu  separableConvolution_255.cu  separableConvolution_31.cu  separableConvolution_63.cu  separableConvolution_7.cu  standardCUDAfunctions.cu
